fixed css bug on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,9 +6,17 @@
   --max-width: 600px;
 }
 
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
-  min-width: 100vw;
+  width: 100%;
 }
 
 body {
@@ -32,7 +40,6 @@ body {
 
 .wrapper {
   max-width: var(--max-width);
-  min-height: 95vh;
   margin: auto;
   display: grid;
   align-items: center;
@@ -51,9 +58,13 @@ body {
   margin: auto;
   width: max-content;
   border: solid var(--line-thickness);
-  border-radius: 100vh;
+  border-radius: 3rem;
   padding: 1rem;
   background-color: var(--bg-alpha-1);
+  font-size: 1.5rem;
+  @media (min-width: 450px) {
+    font-size: 2rem;
+  }
 }
 
 .sign-in {
@@ -61,7 +72,6 @@ body {
   border: solid var(--line-thickness);
   padding: 2rem;
   text-align: center;
-  min-width: 24rem;
   margin: auto;
   background-color: var(--bg-alpha-1);
 }
